@@ -8,41 +8,29 @@ import org.springframework.test.util.ReflectionTestUtils;
 import vendmachtrack.core.MachineTracker;
 import vendmachtrack.core.VendingMachine;
 import vendmachtrack.jsonio.VendmachtrackPersistence;
-import vendmachtrack.springboot.repository.MachineTrackerRepository;
+
+import java.util.*;
 
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertSame;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-
+import static org.mockito.Mockito.*;
 
 public class MachineTrackerRepositoryTest {
 
+    private final VendmachtrackPersistence persistence = Mockito.mock(VendmachtrackPersistence.class);
+    private final MachineTrackerRepository machineTrackerRepository = new MachineTrackerRepository("testFileName");
+    private final ArgumentCaptor<MachineTracker> machineTrackerCaptor = ArgumentCaptor.forClass(MachineTracker.class);
 
-    private VendmachtrackPersistence persistence = Mockito.mock(VendmachtrackPersistence.class);
-    private MachineTrackerRepository machineTrackerRepository = new MachineTrackerRepository("testFileName");
-    private ArgumentCaptor<MachineTracker> machineTrackerCaptor = ArgumentCaptor.forClass(MachineTracker.class);
-
-
-    private VendingMachine vendingmachine = new VendingMachine();
-    private List<VendingMachine> machines = new ArrayList<>();
-    private MachineTracker machineTracker = new MachineTracker();
-
+    private final VendingMachine vendingmachine = new VendingMachine();
+    private final List<VendingMachine> machines = new ArrayList<>();
+    private final MachineTracker machineTracker = new MachineTracker();
 
     /**
      * Sets up the test fixture before each test method is run.
-     * Initializes the Mockito annotations and sets up the vending machine object with an ID of 1 and a location of "Oslo".
+     * Initializes the Mockito annotations and sets up the vending machine object
+     * with an ID of 1 and a location of "Oslo".
      * Adds the vending machine object to the list of machines.
      */
     @BeforeEach
@@ -53,9 +41,7 @@ public class MachineTrackerRepositoryTest {
         vendingmachine.setLocation("Oslo");
         machines.add(vendingmachine);
 
-
     }
-
 
     /**
      * Test case for MachineTrackerRepository's getVendmachtrack method.
@@ -95,16 +81,17 @@ public class MachineTrackerRepositoryTest {
         assertEquals(vendingmachine, actualVendingMachine);
     }
 
-
     /**
-     * Tests the getVendMach method of the MachineTrackerRepository class when the machine is not found.
-     * Given an id, the method should return null if the machine is not found in the database.
+     * Tests the getVendMach method of the MachineTrackerRepository class when the
+     * machine is not found.
+     * Given an id, the method should return null if the machine is not found in the
+     * database.
      */
     @Test
     public void MachineTrackerRepository_getVendMach_retrunsnull() {
         // Arrange
         int id = 1;
-        machineTracker.setMachines(Arrays.asList());
+        machineTracker.setMachines(List.of());
         when(persistence.getVendmachtrack()).thenReturn(machineTracker);
 
         // Act
@@ -114,10 +101,10 @@ public class MachineTrackerRepositoryTest {
         assertNull(actualVendingMachine);
     }
 
-
     /**
      * Tests the saveVendmachtrack method of the MachineTrackerRepository class.
-     * It verifies that the method saves and returns a MachineTracker object correctly.
+     * It verifies that the method saves and returns a MachineTracker object
+     * correctly.
      */
     @Test
     public void MachineTrackerRepository_SaveVendmachtrack_savesAndRetursMAchinetracker() {
@@ -129,15 +116,18 @@ public class MachineTrackerRepositoryTest {
         MachineTracker returnedMachineTracker = machineTrackerRepository.saveVendmachtrack(machineTracker);
 
         // Assert
-        verify(persistence, times(1)).saveVendmachtrack(machineTracker); // check that saveVendmachtrack was called once with the correct parameter
-        assertSame(machineTracker, returnedMachineTracker); // check that the returned object is the same as the one passed in
+        verify(persistence, times(1)).saveVendmachtrack(machineTracker); // check that saveVendmachtrack was called once
+        // with the correct parameter
+        assertSame(machineTracker, returnedMachineTracker); // check that the returned object is the same as the one
+        // passed in
     }
-
 
     /**
      * Tests the addVendMach method of the MachineTrackerRepository class.
-     * It verifies that the method adds a vending machine to the list of machines in the MachineTracker object.
-     * It also verifies that the added vending machine has the correct id and location.
+     * It verifies that the method adds a vending machine to the list of machines in
+     * the MachineTracker object.
+     * It also verifies that the added vending machine has the correct id and
+     * location.
      */
     @Test
     public void MachineTrackerRepository_addVendMach_addsVendingMachine() {
@@ -148,7 +138,8 @@ public class MachineTrackerRepositoryTest {
         MachineTracker initialMachineTracker = new MachineTracker();
         initialMachineTracker.setMachines(new ArrayList<>());
         when(persistence.getVendmachtrack()).thenReturn(initialMachineTracker);
-        when(persistence.saveVendmachtrack(any(MachineTracker.class))).thenAnswer(invocation -> invocation.getArguments()[0]);
+        when(persistence.saveVendmachtrack(any(MachineTracker.class)))
+                .thenAnswer(invocation -> invocation.getArguments()[0]);
 
         // Act
         MachineTracker updatedMachineTracker = machineTrackerRepository.addVendMach(id, location);
@@ -166,7 +157,8 @@ public class MachineTrackerRepositoryTest {
 
     /**
      * Tests the addItem method of the MachineTrackerRepository class.
-     * It verifies that the method adds an item to an existing vending machine and updates the MachineTracker object accordingly.
+     * It verifies that the method adds an item to an existing vending machine and
+     * updates the MachineTracker object accordingly.
      */
     @Test
     public void MachineTrackerRepository_addItem_addsItemToExistingVendingmachine() {
@@ -174,18 +166,19 @@ public class MachineTrackerRepositoryTest {
         // Arrange
         int id = 1;
         String item = "Cola";
-        int amount = 10;
+        int quantity = 10;
         machineTracker.setMachines(machines);
         when(persistence.getVendmachtrack()).thenReturn(machineTracker);
-        when(persistence.saveVendmachtrack(any(MachineTracker.class))).thenAnswer(invocation -> invocation.getArguments()[0]);
+        when(persistence.saveVendmachtrack(any(MachineTracker.class)))
+                .thenAnswer(invocation -> invocation.getArguments()[0]);
 
         // Act
-        VendingMachine result = machineTrackerRepository.addItem(id, item, amount);
+        VendingMachine result = machineTrackerRepository.addItem(id, item, quantity);
 
         // Assert
         assertNotNull(result);
         assertEquals(id, result.getId());
-        assertEquals(amount, result.getStatus().get(item).intValue());
+        assertEquals(quantity, result.getStatus().get(item).intValue());
         verify(persistence).saveVendmachtrack(machineTrackerCaptor.capture());
         MachineTracker capturedMachineTracker = machineTrackerCaptor.getValue();
         // verify that the captured MachineTracker contains the updated VendingMachine
@@ -193,7 +186,8 @@ public class MachineTrackerRepositoryTest {
     }
 
     /**
-     * Tests the addItem method of the MachineTrackerRepository class when the vending machine does not exist.
+     * Tests the addItem method of the MachineTrackerRepository class when the
+     * vending machine does not exist.
      */
     @Test
     public void MachineTrackerRepository_addItem_returnNullVendingMachinenotexist() {
@@ -201,12 +195,12 @@ public class MachineTrackerRepositoryTest {
         // Arrange
         int id = 1;
         String item = "Cola";
-        int amount = 10;
+        int quantity = 10;
         machineTracker.setMachines(Collections.emptyList());
         when(persistence.getVendmachtrack()).thenReturn(machineTracker);
 
         // Act
-        VendingMachine result = machineTrackerRepository.addItem(id, item, amount);
+        VendingMachine result = machineTrackerRepository.addItem(id, item, quantity);
 
         // Assert
         assertNull(result);
@@ -214,8 +208,10 @@ public class MachineTrackerRepositoryTest {
 
     /**
      * Tests the changeLocation method of MachineTrackerRepository class.
-     * It verifies that the method updates the location of a vending machine with the given id.
-     * It also verifies that the updated vending machine is saved in the MachineTracker object.
+     * It verifies that the method updates the location of a vending machine with
+     * the given id.
+     * It also verifies that the updated vending machine is saved in the
+     * MachineTracker object.
      */
     @Test
     public void MachineTrackerRepository_changeLocation_changeLocationOnVendingMachine() {
@@ -225,7 +221,8 @@ public class MachineTrackerRepositoryTest {
         String newLocation = "Trondheim";
         machineTracker.setMachines(machines);
         when(persistence.getVendmachtrack()).thenReturn(machineTracker);
-        when(persistence.saveVendmachtrack(any(MachineTracker.class))).thenAnswer(invocation -> invocation.getArguments()[0]);
+        when(persistence.saveVendmachtrack(any(MachineTracker.class)))
+                .thenAnswer(invocation -> invocation.getArguments()[0]);
 
         // Act
         VendingMachine result = machineTrackerRepository.changeLocation(id, newLocation);
@@ -241,10 +238,10 @@ public class MachineTrackerRepositoryTest {
 
     }
 
-
     /**
      * Test case for the changeLocation method of MachineTrackerRepository class.
-     * It tests the scenario where the vending machine with the given id does not exist in the system.
+     * It tests the scenario where the vending machine with the given id does not
+     * exist in the system.
      */
     @Test
     public void MachineTrackerRepository_changeLocation_returnNullVendingMachineNotExist() {
@@ -261,15 +258,16 @@ public class MachineTrackerRepositoryTest {
         // Assert
         assertNull(result);
 
-
     }
-
 
     /**
      * Tests the removeVendMach method of the MachineTrackerRepository class.
-     * It verifies that the method removes a vending machine from the list of machines in the MachineTracker object,
-     * saves the updated MachineTracker object to the persistence layer, and returns the updated MachineTracker object.
-     * It also verifies that the returned and saved MachineTracker objects are the same and that the list of machines
+     * It verifies that the method removes a vending machine from the list of
+     * machines in the MachineTracker object,
+     * saves the updated MachineTracker object to the persistence layer, and returns
+     * the updated MachineTracker object.
+     * It also verifies that the returned and saved MachineTracker objects are the
+     * same and that the list of machines
      * in the updated MachineTracker object is empty.
      */
     @Test
@@ -279,7 +277,8 @@ public class MachineTrackerRepositoryTest {
         int id = 1;
         machineTracker.setMachines(machines);
         when(persistence.getVendmachtrack()).thenReturn(machineTracker);
-        when(persistence.saveVendmachtrack(any(MachineTracker.class))).thenAnswer(invocation -> invocation.getArguments()[0]);
+        when(persistence.saveVendmachtrack(any(MachineTracker.class)))
+                .thenAnswer(invocation -> invocation.getArguments()[0]);
 
         // Act
         MachineTracker result = machineTrackerRepository.removeVendMach(id);
@@ -289,15 +288,20 @@ public class MachineTrackerRepositoryTest {
         assertTrue(result.getMachines().isEmpty());
         verify(persistence).saveVendmachtrack(machineTrackerCaptor.capture());
         MachineTracker capturedMachineTracker = machineTrackerCaptor.getValue();
-        assertEquals(machineTracker, capturedMachineTracker); // ensure the returned and saved MachineTrackers are the same
+        assertEquals(machineTracker, capturedMachineTracker); // ensure the returned and saved MachineTrackers are the
+        // same
     }
 
     /**
-     * Test case for the removeVendMach method of the MachineTrackerRepository class.
-     * Tests the scenario where the vendmach to be removed does not exist in the MachineTracker.
+     * Test case for the removeVendMach method of the MachineTrackerRepository
+     * class.
+     * Tests the scenario where the vendmach to be removed does not exist in the
+     * MachineTracker.
      * <p>
-     * The test sets up the necessary mocks and data, calls the removeVendMach method with a non-existent VendindgMachineTracker id,
-     * and verifies that the returned VendingMachineTracker is the same as the one saved, and that the saved VendingMachineTracker
+     * The test sets up the necessary mocks and data, calls the removeVendMach
+     * method with a non-existent VendindgMachineTracker id,
+     * and verifies that the returned VendingMachineTracker is the same as the one
+     * saved, and that the saved VendingMachineTracker
      * has the same machines as the original one.
      */
     @Test
@@ -307,7 +311,8 @@ public class MachineTrackerRepositoryTest {
         int id = 3;
         machineTracker.setMachines(machines);
         when(persistence.getVendmachtrack()).thenReturn(machineTracker);
-        when(persistence.saveVendmachtrack(any(MachineTracker.class))).thenAnswer(invocation -> invocation.getArguments()[0]);
+        when(persistence.saveVendmachtrack(any(MachineTracker.class)))
+                .thenAnswer(invocation -> invocation.getArguments()[0]);
 
         // Act
         MachineTracker result = machineTrackerRepository.removeVendMach(id);
@@ -317,13 +322,16 @@ public class MachineTrackerRepositoryTest {
         assertNotNull(result.getMachines());
         verify(persistence).saveVendmachtrack(machineTrackerCaptor.capture());
         MachineTracker capturedMachineTracker = machineTrackerCaptor.getValue();
-        assertEquals(machineTracker, capturedMachineTracker); // ensure the returned and saved MachineTrackers are the same
+        assertEquals(machineTracker, capturedMachineTracker); // ensure the returned and saved MachineTrackers are the
+        // same
     }
 
     /**
      * Tests the removeItem method of the MachineTrackerRepository class.
-     * It verifies that the method removes the specified item from the vending machine and updates the status accordingly.
-     * It also verifies that the updated vending machine is saved correctly in the persistence layer.
+     * It verifies that the method removes the specified item from the vending
+     * machine and updates the status accordingly.
+     * It also verifies that the updated vending machine is saved correctly in the
+     * persistence layer.
      */
     @Test
     public void MachineTrackerRepository_removeitem_removesItemFromVendigMachine() {
@@ -331,18 +339,19 @@ public class MachineTrackerRepositoryTest {
         // Arrange
         int id = 1;
         String item = "Cola";
-        int amount = 5;
+        int quantity = 5;
         HashMap<String, Integer> status = new HashMap<>();
         status.put(item, 6);
 
         vendingmachine.setStatus(status);
         MachineTracker machineTracker = new MachineTracker();
-        machineTracker.setMachines(Arrays.asList(vendingmachine));
+        machineTracker.setMachines(Collections.singletonList(vendingmachine));
         when(persistence.getVendmachtrack()).thenReturn(machineTracker);
-        when(persistence.saveVendmachtrack(any(MachineTracker.class))).thenAnswer(invocation -> invocation.getArguments()[0]);
+        when(persistence.saveVendmachtrack(any(MachineTracker.class)))
+                .thenAnswer(invocation -> invocation.getArguments()[0]);
 
         // Act
-        VendingMachine result = machineTrackerRepository.removeItem(id, item, amount);
+        VendingMachine result = machineTrackerRepository.removeItem(id, item, quantity);
 
         // Assert
         assertNotNull(result);
@@ -350,12 +359,14 @@ public class MachineTrackerRepositoryTest {
         assertEquals(1, result.getStatus().get(item)); // 1 item should remain
         verify(persistence).saveVendmachtrack(machineTrackerCaptor.capture());
         MachineTracker capturedMachineTracker = machineTrackerCaptor.getValue();
-        assertEquals(machineTracker, capturedMachineTracker); // ensure the returned and saved MachineTrackers are the same
+        assertEquals(machineTracker, capturedMachineTracker); // ensure the returned and saved MachineTrackers are the
+        // same
 
     }
 
     /**
-     * Tests the removeItem method of the MachineTrackerRepository class when the vending machine does not exist.
+     * Tests the removeItem method of the MachineTrackerRepository class when the
+     * vending machine does not exist.
      */
     @Test
     public void MachineTrackerRepository_removeItem_removesItemVendingMachineNotExist() {
@@ -363,13 +374,13 @@ public class MachineTrackerRepositoryTest {
         // Arrange
         int id = 1;
         String item = "Cola";
-        int amount = 5;
+        int quantity = 5;
         MachineTracker machineTracker = new MachineTracker();
-        machineTracker.setMachines(Arrays.asList()); // no vending machines
+        machineTracker.setMachines(List.of()); // no vending machines
         when(persistence.getVendmachtrack()).thenReturn(machineTracker);
 
         // Act
-        VendingMachine result = machineTrackerRepository.removeItem(id, item, amount);
+        VendingMachine result = machineTrackerRepository.removeItem(id, item, quantity);
 
         // Assert
         assertNull(result);
